--- a/src/assets/styles/components/_nav--secondary.scss
+++ b/src/assets/styles/components/_nav--secondary.scss
@@ -1,110 +1,109 @@
 .nav--secondary {
-  flex: 0 0 100%;
-  padding-left: calc(var(--gutter) / 2);
-  padding-right: calc(var(--gutter) / 2);
-  position: relative;
+    flex: 0 0 100%;
+    padding-inline: calc(var(--gutter) / 2);
+    position: relative;
 
-  .wrapper {
-    background: var(--fl-bgColor, var(--indigo-200));
-    margin-left: calc(-1 * var(--gutter));
-    padding: rem(40) var(--gutter);
-    width: calc(100% + (2 * var(--gutter)));
-  }
+    .wrapper {
+        background: var(--fl-bgColor, var(--indigo-200));
+        inline-size: calc(100% + (2 * var(--gutter)));
+        margin-inline-start: calc(-1 * var(--gutter));
+        padding-block: rem(40);
+        padding-inline: var(--gutter);
+    }
 }
 
 .menu--secondary a {
-  align-items: center;
-  border-bottom: rem(1) solid var(--fl-linkColor, var(--black));
-  border-radius: 0;
-  display: block;
-  display: flex;
-  flex-direction: row;
-  height: rem(50);
-  justify-content: space-between;
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    background: var(--fl-linkColor, var(--indigo-800));
-    border-bottom-color: transparent;
-    box-shadow:
-      calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)),
-      var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
-    color: var(--fl-bgColor, var(--white));
-    outline: transparent;
-  }
-
-  &:active {
-    background: var(--fl-linkColor, var(--indigo-500));
-    box-shadow:
-      calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)),
-      var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
-    color: var(--fl-bgColor, var(--white));
-    outline: transparent;
-  }
-
-  &::after {
-    background: currentcolor;
-    content: '';
-    display: inline-block;
-    height: 1.5em;
-    margin-left: 0.125em;
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-size: 1.5em;
-  }
-
-  &:not([rel='external'])::after {
-    margin-bottom: 0;
-    mask-image: url('../images/internal.svg');
-    width: 1em;
-  }
-
-  &[rel~='external']::after,
-  &[href^='mailto:']::after {
-    margin-bottom: 0.125em;
-    mask-image: url('../images/external.svg');
-    width: 1.5em;
-  }
-
-  &[aria-current='page'],
-  &[data-parent='true'] {
-    border-bottom-color: var(--fl-linkColor, var(--indigo-500));
-    box-shadow: inset 0 rem(-1) 0 0 var(--fl-bgColor, var(--indigo-500));
-    font-weight: var(--fw-bold);
+    align-items: center;
+    block-size: rem(50);
+    border-block-end: rem(1) solid var(--fl-linkColor, var(--black));
+    border-radius: 0;
+    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-decoration: none;
 
     &:hover,
     &:focus {
-      border-bottom-color: transparent;
-      box-shadow:
-        calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)),
-        var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
+        background: var(--fl-linkColor, var(--indigo-800));
+        border-block-end-color: transparent;
+        box-shadow:
+            calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)),
+            var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
+        color: var(--fl-bgColor, var(--white));
+        outline: transparent;
     }
 
     &:active {
-      border-bottom-color: transparent;
-      box-shadow:
-        calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)),
-        var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
-      color: var(--fl-bgColor);
+        background: var(--fl-linkColor, var(--indigo-500));
+        box-shadow:
+            calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)),
+            var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
+        color: var(--fl-bgColor, var(--white));
+        outline: transparent;
     }
-  }
+
+    &::after {
+        background: currentcolor;
+        block-size: 1.5em;
+        content: "";
+        display: inline-block;
+        margin-inline-start: 0.125em;
+        mask-position: center;
+        mask-repeat: no-repeat;
+        mask-size: 1.5em;
+    }
+
+    &:not([rel="external"])::after {
+        inline-size: 1em;
+        margin-block-end: 0;
+        mask-image: url("../images/internal.svg");
+    }
+
+    &[rel~="external"]::after,
+    &[href^="mailto:"]::after {
+        inline-size: 1.5em;
+        margin-block-end: 0.125em;
+        mask-image: url("../images/external.svg");
+    }
+
+    &[aria-current="page"],
+    &[data-parent="true"] {
+        border-block-end-color: var(--fl-linkColor, var(--indigo-500));
+        box-shadow: inset 0 rem(-1) 0 0 var(--fl-bgColor, var(--indigo-500));
+        font-weight: var(--fw-bold);
+
+        &:hover,
+        &:focus {
+            border-block-end-color: transparent;
+            box-shadow:
+                calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800)),
+                var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-800));
+        }
+
+        &:active {
+            border-block-end-color: transparent;
+            box-shadow:
+                calc(-1 * var(--gutter)) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500)),
+                var(--gutter) rem(-1) 0 rem(1) var(--fl-linkColor, var(--indigo-500));
+            color: var(--fl-bgColor);
+        }
+    }
 }
 
 @include breakpoint-up(md) {
-  .nav--secondary {
-    flex: 0 0 calc(1 / 3 * 100%);
-    margin-bottom: rem(96);
-    margin-top: rem(96);
+    .nav--secondary {
+        flex: 0 0 calc(1 / 3 * 100%);
+        margin-block: rem(96);
 
-    &::after {
-      display: none;
-    }
+        &::after {
+            display: none;
+        }
 
-    .wrapper {
-      box-shadow: rem(9) rem(9) 0 0 var(--fl-fgColor, var(--indigo-500));
-      margin-left: 0;
-      width: 100%;
+        .wrapper {
+            box-shadow: rem(9) rem(9) 0 0 var(--fl-fgColor, var(--indigo-500));
+            inline-size: 100%;
+            margin-inline-start: 0;
+        }
     }
-  }
 }
