--- a/src/assets/styles/abstracts/_mixins.scss
+++ b/src/assets/styles/abstracts/_mixins.scss
@@ -2,81 +2,81 @@
 // This file contains all application-wide Sass mixins.
 // -----------------------------------------------------------------------------
 @mixin visually-hidden {
-  border-width: 0;
-  clip: rect(0, 0, 0, 0);
-  height: rem(1);
-  margin: rem(-1);
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  white-space: nowrap;
-  width: rem(1);
+    block-size: rem(1);
+    border-width: 0;
+    clip: rect(0, 0, 0, 0);
+    inline-size: rem(1);
+    margin: rem(-1);
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    white-space: nowrap;
 }
 
 @mixin breakpoint-up($name, $breakpoints: $breakpoints) {
-  $min: breakpoint-min($name, $breakpoints);
+    $min: breakpoint-min($name, $breakpoints);
 
-  @if $min {
-    @media (width >= rem($min)) {
-      @content;
+    @if $min {
+        @media (width >= rem($min)) {
+            @content;
+        }
+        /* stylelint-disable-next-line block-closing-brace-newline-after */
+    } @else {
+        @content;
     }
-    /* stylelint-disable-next-line block-closing-brace-newline-after */
-  } @else {
-    @content;
-  }
 }
 
 @mixin breakpoint-down($name, $breakpoints: $breakpoints) {
-  $max: breakpoint-max($name, $breakpoints);
+    $max: breakpoint-max($name, $breakpoints);
 
-  @if $max {
-    @media (width <= rem($max)) {
-      @content;
+    @if $max {
+        @media (width <= rem($max)) {
+            @content;
+        }
+        /* stylelint-disable-next-line block-closing-brace-newline-after */
+    } @else {
+        @content;
     }
-    /* stylelint-disable-next-line block-closing-brace-newline-after */
-  } @else {
-    @content;
-  }
 }
 
 @mixin breakpoint-between($lower, $upper, $breakpoints: $breakpoints) {
-  $min: breakpoint-min($lower, $breakpoints);
-  $max: breakpoint-max($upper, $breakpoints);
+    $min: breakpoint-min($lower, $breakpoints);
+    $max: breakpoint-max($upper, $breakpoints);
 
-  @if $min != null and $max != null {
-    @media (width >= rem($min)) and (width <= rem($max)) {
-      @content;
+    @if $min != null and $max != null {
+        @media (width >= rem($min)) and (width <= rem($max)) {
+            @content;
+        }
+        /* stylelint-disable-next-line block-closing-brace-newline-after */
+    } @else if $max == null {
+        @include media-breakpoint-up($lower, $breakpoints) {
+            @content;
+        }
+        /* stylelint-disable-next-line block-closing-brace-newline-after */
+    } @else if $min == null {
+        @include media-breakpoint-down($upper, $breakpoints) {
+            @content;
+        }
     }
-    /* stylelint-disable-next-line block-closing-brace-newline-after */
-  } @else if $max == null {
-    @include media-breakpoint-up($lower, $breakpoints) {
-      @content;
-    }
-    /* stylelint-disable-next-line block-closing-brace-newline-after */
-  } @else if $min == null {
-    @include media-breakpoint-down($upper, $breakpoints) {
-      @content;
-    }
-  }
 }
 
 @mixin breakpoint-only($name, $breakpoints: $breakpoints) {
-  $min: breakpoint-min($name, $breakpoints);
-  $max: breakpoint-max($name, $breakpoints);
+    $min: breakpoint-min($name, $breakpoints);
+    $max: breakpoint-max($name, $breakpoints);
 
-  @if $min != null and $max != null {
-    @media (width >= rem($min)) and (width <= rem($max)) {
-      @content;
+    @if $min != null and $max != null {
+        @media (width >= rem($min)) and (width <= rem($max)) {
+            @content;
+        }
+        /* stylelint-disable-next-line block-closing-brace-newline-after */
+    } @else if $max == null {
+        @include media-breakpoint-up($name, $breakpoints) {
+            @content;
+        }
+        /* stylelint-disable-next-line block-closing-brace-newline-after */
+    } @else if $min == null {
+        @include media-breakpoint-down($name, $breakpoints) {
+            @content;
+        }
     }
-    /* stylelint-disable-next-line block-closing-brace-newline-after */
-  } @else if $max == null {
-    @include media-breakpoint-up($name, $breakpoints) {
-      @content;
-    }
-    /* stylelint-disable-next-line block-closing-brace-newline-after */
-  } @else if $min == null {
-    @include media-breakpoint-down($name, $breakpoints) {
-      @content;
-    }
-  }
 }
