--- a/src/assets/styles/base/_helpers.scss
+++ b/src/assets/styles/base/_helpers.scss
@@ -2,15 +2,13 @@
 // This file contains CSS helper classes.
 // -----------------------------------------------------------------------------
 .visually-hidden {
-  @include visually-hidden;
+    @include visually-hidden;
 }
 
 .container,
 .wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: rem(1200);
-  padding-left: calc(var(--gutter) / 2);
-  padding-right: calc(var(--gutter) / 2);
-  width: 100%;
+    inline-size: 100%;
+    margin-inline: auto;
+    max-inline-size: rem(1200);
+    padding-inline: calc(var(--gutter) / 2);
 }
