--- a/src/assets/styles/components/_page-header.scss
+++ b/src/assets/styles/components/_page-header.scss
@@ -1,44 +1,42 @@
 .page-header {
-  background: var(--fl-bgColor, var(--header-bg, var(--indigo-100)));
-  border-bottom: rem(10) solid var(--fl-fgColor, var(--header-border));
-  color: var(--fl-fgColor, var(--header-fg, $black));
-  flex: 0 0 100%;
-  padding-bottom: rem(80);
-  padding-top: rem(80);
-  position: relative;
+    background: var(--fl-bgColor, var(--header-bg, var(--indigo-100)));
+    border-block-end: rem(10) solid var(--fl-fgColor, var(--header-border));
+    color: var(--fl-fgColor, var(--header-fg, $black));
+    flex: 0 0 100%;
+    padding-block: rem(80);
+    position: relative;
 
-  .wrapper {
-    margin: 0;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    width: calc(100vw - var(--gutter));
-  }
-
-  .breadcrumbs {
-    font-family: var(--fl-font-family, var(--ff-display));
-    font-size: var(--step-2);
-    font-weight: var(--fw-semibold);
-  }
-
-  .intro {
-    font-size: var(--step--1);
-    margin-top: rem(20);
-  }
-}
-
-@include breakpoint-up(sm) {
-  .page-header {
-    
-    h1 {
-      width: 66%;
+    .wrapper {
+        inline-size: calc(100vw - var(--gutter));
+        margin: 0;
+        margin-inline-start: 50%;
+        transform: translateX(-50%);
     }
 
     .breadcrumbs {
-      width: 100%;
+        font-family: var(--fl-font-family, var(--ff-display));
+        font-size: var(--step-2);
+        font-weight: var(--fw-semibold);
     }
 
     .intro {
-      width: 66%;
+        font-size: var(--step--1);
+        margin-block-start: rem(20);
     }
-  }
+}
+
+@include breakpoint-up(sm) {
+    .page-header {
+        h1 {
+            inline-size: 66%;
+        }
+
+        .breadcrumbs {
+            inline-size: 100%;
+        }
+
+        .intro {
+            inline-size: 66%;
+        }
+    }
 }
