--- a/src/assets/styles/pages/_projects.scss
+++ b/src/assets/styles/pages/_projects.scss
@@ -1,52 +1,54 @@
 .page--projects {
-  .projects {
-    margin: rem(64) 0 rem(64) 0;
-  }
-
-  .project__link {
-    margin-top: rem(16);
-  }
-
-  .project {
-    margin-top: rem(48);
-
-    .thumbnail {
-      height: rem(177);
-      object-fit: contain;
-      width: rem(266);
+    .projects {
+        margin-block: rem(64);
+        margin-inline: 0;
     }
 
-    a[href^='/projects/'] {
-      font-weight: 500;
+    .project__link {
+        margin-block-start: rem(16);
     }
-  }
+
+    .project {
+        margin-block-start: rem(48);
+
+        .thumbnail {
+            block-size: rem(177);
+            inline-size: rem(266);
+            object-fit: contain;
+        }
+
+        a[href^="/projects/"] {
+            font-weight: 500;
+        }
+    }
 }
 
 @include breakpoint-up(sm) {
-  .page--projects {
-    .projects {
-      display: grid;
-      grid-gap: var(--gutter);
-      grid-template-columns: repeat(2, 1fr);
-    }
+    .page--projects {
+        .projects {
+            display: grid;
+            grid-gap: var(--gutter);
+            grid-template-columns: repeat(2, 1fr);
+        }
 
-    .project {
-      .thumbnail {
-        height: rem(247);
-        width: rem(370);
-      }
+        .project {
+            .thumbnail {
+                block-size: rem(247);
+                inline-size: rem(370);
+            }
+        }
     }
-  }
 }
 
 @include breakpoint-up(md) {
-  .page--projects {
-    .projects {
-      grid-template-columns: repeat(3, 1fr);
-    }
+    .page--projects {
+        .projects {
+            grid-template-columns: repeat(3, 1fr);
+        }
 
-    .project {
-      padding: 0 calc(var(--gutter) / 2);
+        .project {
+            padding-block: 0;
+            padding-inline: calc(var(--gutter) / 2);
+        }
     }
-  }
 }
