--- a/src/assets/styles/pages/_single.scss
+++ b/src/assets/styles/pages/_single.scss
@@ -1,50 +1,47 @@
 .single {
-  main > article header .wrapper {
-    margin-left: auto;
-    margin-right: auto;
-  }
+    main > article header .wrapper {
+        margin-inline: auto;
+    }
 
-  main > article .content {
-    flex: 0 0 100%;
-    padding-bottom: rem(40);
-    padding-top: rem(40);
-  }
+    main > article .content {
+        flex: 0 0 100%;
+        padding-block: rem(40);
+    }
 }
 
 @include breakpoint-up(sm) {
-  .single {
-    main > article header .wrapper {
-      width: 75%;
-    }
+    .single {
+        main > article header .wrapper {
+            inline-size: 75%;
+        }
 
-    main > article .content {
-      flex: 0 0 75%;
-    }
+        main > article .content {
+            flex: 0 0 75%;
+        }
 
-    &.single--idea {
-      main > article header .wrapper {
-        margin-left: 0;
-      }
+        &.single--idea {
+            main > article header .wrapper {
+                margin-inline-start: 0;
+            }
+        }
     }
-  }
 }
 
 @include breakpoint-up(md) {
-  .single {
-    main > article header .wrapper {
-      width: 50%;
-    }
+    .single {
+        main > article header .wrapper {
+            inline-size: 50%;
+        }
 
-    main > article .content {
-      flex: 0 0 50%;
-      padding-bottom: rem(80);
-      padding-top: rem(80);
-    }
+        main > article .content {
+            flex: 0 0 50%;
+            padding-block: rem(80);
+        }
 
-    &.single--idea {
-      main > article header .wrapper {
-        width: 75%;
-      }
+        &.single--idea {
+            main > article header .wrapper {
+                inline-size: 75%;
+            }
+        }
     }
-  }
 }
