feat: disallow indexing of /lib

--- a/src/robots.njk
+++ b/src/robots.njk
@@ -7,6 +7,7 @@ Sitemap: {{ site.url }}/sitemap.xml
 User-Agent: *
 Disallow: /404.html
 Disallow: /admin/
+Disallow: /lib/
 Disallow: /repertoire/
 
 User-agent: GPTBot
