--- a/src/admin/admin.njk
+++ b/src/admin/admin.njk
@@ -11,8 +11,8 @@ eleventyExcludeFromCollections: true
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="/lib/cms/netlify-cms.js"></script>
+  <!-- Include the script that builds the page and powers Decap CMS -->
+  <script src="/lib/cms/decap-cms.js"></script>
   {% if env.context === "dev" %}
   <script src="/lib/cms/react.development.js"></script>
   {% else %}
