feat: add sorting and pinning features to the resources page

--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -32,6 +32,9 @@
         <symbol id="close" viewBox="0 0 24 24" fill="none">
         {% include 'svg/icon-x.svg' %}
         </symbol>
+        <symbol id="pinned" viewBox="0 0 24 24" fill="none">
+        {% include 'svg/pin.svg' %}
+        </symbol>
     </svg>
     
     {% include 'partials/components/page-header.njk' %}
