fix: sort select design based on PR feedback

--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -378,13 +378,14 @@
 
     .resources-sort {
         display: flex;
-        gap: rem(4);
+        gap: rem(8);
         justify-content: flex-end;
         margin-block-end: rem(4);
 
         select {
             border: rem(1) solid var(--fl-fgColor, var(--black));
             border-radius: rem(3);
+            padding-inline: rem(8);
         }
     }
 
