--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -143,7 +143,7 @@ blockquote {
         display: inline-block;
         inline-size: 0.4em;
         margin-inline: 0 rem(8);
-        outline: solid var(--fl-fgColor, var(--gery-200));
+        outline: solid var(--fl-fgColor, var(--grey-200));
         position: relative;
     }
 }
