--- a/src/_includes/partials/components/page-header.njk
+++ b/src/_includes/partials/components/page-header.njk
@@ -19,7 +19,10 @@
         {% if projectName %}
         {% set links = page.url | locale_links %}
         {%- for link in links %}
-        <a href="{{ link.url }}" lang="{{ link.lang }}" hreflang="{{ link.lang }}">{%- include 'svg/icon-translation.svg' -%}{%- _i locale, "Read in ${language}", {language: supportedLanguages[link.lang].name } -%}</a>
+        
+        <a href="{{ link.url }}" lang="{{ link.lang }}" hreflang="{{ link.lang }}">
+            {%- include 'svg/icon-translation.svg' -%}<span>{{ 'Read in English' if link.lang === 'en-CA' else 'Lire en français' }}</span>
+        </a>
         {%- endfor -%}
         {% endif %}
         {% if intro %}
