--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -63,17 +63,13 @@ footer {
 a[hreflang],
 a[download],
 a[rel="external"] {
+    align-items: center;
+    display: inline-flex;
+    gap: 0.25em;
+
     svg {
         display: inline-block;
         inline-size: 1em;
-    }
-
-    svg:first-child {
-        margin-inline-end: 0.25em;
-    }
-
-    svg:last-child {
-        margin-inline-start: 0.25em;
     }
 }
 
