fix: more sensible project title setup (resolves #719)

--- a/src/_includes/partials/components/page-header.njk
+++ b/src/_includes/partials/components/page-header.njk
@@ -15,8 +15,7 @@
         {% endfor %}
         </p>
         {% endif %}
-        <h1>{{ title }}</h1>
-        {% if projectName %}
+        <h1>{{ parentTitle if parentTitle else title }}</h1>
         {% set links = page.url | locale_links %}
         {%- for link in links %}
     
@@ -24,7 +23,6 @@
             {%- include 'svg/icon-translation.svg' -%}<span>{{ 'Read in English' if link.lang === 'en-CA' else 'Lire en français' }}</span>
         </a>
         {%- endfor -%}
-        {% endif %}
         {% if intro %}
         <div class="intro">{{ intro | markdown | safe }}</div>
         {% endif %}
