--- a/src/_includes/layouts/project.njk
+++ b/src/_includes/layouts/project.njk
@@ -9,10 +9,9 @@
 {% block content %}
     {% include 'partials/components/page-header.njk' %}
     <article>
-        {% set articleTitle = title %}
-        {% set title = projectName %}
+        {% if parentTitle %}
 
-        {% set parentPages = collections.all | eleventyNavigationBreadcrumb(articleTitle) %}
+        {% set parentPages = collections.all | eleventyNavigationBreadcrumb(title) %}
 
         <div class="back-to-parent">
         {% if parentPages.length > 1 %}
@@ -20,15 +19,19 @@
             <a href="{{ parent.url }}">{% include "svg/previous.svg" %} Back to {{ parent.title | safe }}</a>
         {% endif %}
         </div>
+
+        {% endif %}
         
         <div class="content">
             <div class="wrapper">
-                <h2>{{ articleTitle | safe }}</h2>
+                {% if parentTitle %}
+                <h2>{{ title | safe }}</h2>
+                {% endif %}
                 {{ content | safe }}
             </div>
         </div>
 
-        {% set navPages = collections.all | eleventyNavigation(articleTitle) %}
+        {% set navPages = collections.all | eleventyNavigation(title) %}
 
         <nav class="nav--secondary" aria-labelledby="child-pages-heading">
         {%- if navPages.length %}
