--- a/src/_includes/partials/components/pagination.njk
+++ b/src/_includes/partials/components/pagination.njk
@@ -2,13 +2,13 @@
     <h2 id="pagination" class="visually-hidden">news page navigation</h2>
     <ul class="container">
     {%- if pagination.href.previous %}
-        <li><a href="{{ pagination.href.previous }}">{% include 'svg/previous.svg' %}<span class="visually-hidden">previous</span></a></li>
+        <li><a class="pagination-link" href="{{ pagination.href.previous }}">{% include 'svg/previous.svg' %}<span class="visually-hidden">previous</span></a></li>
     {%- endif %}
     {%- for pageEntry in pagination.pages %}
-        <li><a href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>{{ loop.index }}</a></li>
+        <li><a class="pagination-link" href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>{{ loop.index }}</a></li>
     {%- endfor %}
     {%- if pagination.href.next %}
-        <li><a href="{{ pagination.href.next }}"><span class="visually-hidden">next</span>{% include 'svg/next.svg' %}</a></li>
+        <li><a class="pagination-link" href="{{ pagination.href.next }}"><span class="visually-hidden">next</span>{% include 'svg/next.svg' %}</a></li>
     {%- endif %}
     </ul>
 </nav>
