--- a/src/assets/styles/layout/_footer.scss
+++ b/src/assets/styles/layout/_footer.scss
@@ -86,7 +86,8 @@
     margin-block-end: rem(8);
 }
 
-.footer .social a {
+.footer .social a,
+.footer #footer-email {
     text-decoration: none;
 }
 
