feat: set up event promo section

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -17,6 +17,7 @@ $blue-500: #42cdfa;
 $blue-900: #00303f;
 $coral-500: #f66a6a;
 $coral-800: #e53e3e;
+$teal-500: #77d6b3;
 $yellow-200: #faf089;
 $yellow-500: #f6e05e;
 $colors: (
@@ -34,6 +35,7 @@ $colors: (
     "blue-900": $blue-900,
     "coral-500": $coral-500,
     "coral-800": $coral-800,
+    "teal-500": $teal-500,
     "yellow-200": $yellow-200,
     "yellow-500": $yellow-500
 );
