--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -6,12 +6,45 @@
     font-family: Merriweather;
     font-style: normal;
     font-weight: 900;
-    src:
-        local("Merriweather Black"),
-        local("Merriweather-Black"),
-        url("../fonts/merriweather-900.woff2") format("woff2"),
+    src: url("../fonts/merriweather-900.woff2") format("woff2"),
         url("../fonts/merriweather-900.woff") format("woff");
 }
+
+@font-face {
+    font-display: swap;
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: 700;
+    src: url("../fonts/mulish-700-subset.woff2") format("woff2");
+    unicode-range: "U+46,U+52,U+61-69,U+6D-6F,U+72-75,U+77";
+}
+
+@font-face {
+    font-display: swap; 
+    font-family: 'Montserrat Alternates';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/montserrat-alternates-regular-subset.woff2') format('woff2');
+    unicode-range: "U+26,U+2C,U+32,U+37,U+38,U+41,U+43,U+4D,U+55,U+61-65,U+69,U+6C,U+6E,U+73,U+79";
+  }
+
+  @font-face {
+    font-display: swap; 
+    font-family: 'Montserrat Alternates';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/montserrat-alternates-600-subset.woff2') format('woff2');
+    unicode-range: "U+20,U+41,U+55,U+57,U+61-65,U+69,U+6C-6F,U+72,U+73";
+  }
+
+  @font-face {
+    font-display: swap; 
+    font-family: 'Montserrat Alternates';
+    font-style: normal;
+    font-weight: 800;
+    src: url('../fonts/montserrat-alternates-800-subset.woff2') format('woff2');
+    unicode-range: "U+20,U+41,U+61,U+64-69,U+6B,U+6E,U+6F,U+72,U+74";
+  }
 
 @font-face {
     font-display: swap;
