--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -8,6 +8,43 @@
 
 {% block content %}
     {% include 'partials/components/page-header.njk' %}
+    <article id="acaw-cama">
+        <div class="section section--full section--full-bleed section--bg-teal-500 section--fg-black">
+            <div class="wrapper">
+                <header>
+                    <svg viewBox="0 0 97.88 132.42" height="132.42" width="97.88" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="97.88" height="132.42" fill="#000" />
+                    </svg>
+                    <h2>
+                        Accessible Canada, <strong>Accessible World</strong><br />
+                        Un Canada accessible, <strong>Un monde accessible</strong>
+                    </h2>
+                </header>
+            </div>
+        </div>
+        <div class="section section--full section--full-bleed section--bg-white section--fg-black">
+            <div class="wrapper">
+                <p class="subhead">
+                <strong>A different kind of gathering</strong><br />
+                May 27 &amp; 28 
+                </p>
+            </div>
+        </div>
+        <div class="section section--full section--full-bleed section--bg-teal-500 section--fg-black">
+            <div class="wrapper">
+                <div>
+                    <ul role="list">
+                        <li>
+                            <a href="https://sites.events.concordia.ca/sites/accessconf/en/accessible-canada-accessible-world" rel="external">Find out more about the conference</a>
+                        </li>
+                        <li>
+                            <a href="https://sites.events.concordia.ca/sites/accessconf/en/accessible-canada-accessible-world/register" rel="external">Register now</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </article>
     <article>
         {%- if sections %}
             {%- for section in sections %}
