fix: use class instead of id

--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -17,7 +17,7 @@
         <p class="h3">Contact us</p>
         <div>
             <p class="h4">Email</p>
-            <p><a id="footer-email" href="mailto:{{ site.email }}">{{ site.email }}</a></p>
+            <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
             <p class="h4">Address</p>
             {{ site.address | markdown | safe }}
         </div>
