fix: update link styles throughout the site (#776)
* fix: update link styles throughout the site

* fix: use class instead of id

* fix: use class instead of id

---------

Co-authored-by: Ned Zimmerman <ned@bight.dev>

--- a/src/assets/styles/layout/_footer.scss
+++ b/src/assets/styles/layout/_footer.scss
@@ -86,7 +86,8 @@
     margin-block-end: rem(8);
 }
 
-.footer .social a {
+.footer .social a,
+.footer .contact a {
     text-decoration: none;
 }
 
