--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -65,13 +65,11 @@ footer {
 a[hreflang],
 a[download],
 a[rel="external"] {
-    align-items: center;
-    display: inline-flex;
-    gap: 0.25em;
-
     svg {
         display: inline-block;
         inline-size: 1em;
+        margin-block-end: 0.25em;
+        margin-inline: 0.25em 0.5ch;
     }
 }
 
